updates to the location and company phone number

--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
             </p>
             <div class="line-art flex">
               <div></div>
-              <img src="images/4-dots.png" />
+              <img src="images/4-dots.png" alt="png"/>
               <div></div>
             </div>
           </div>
           <div class="services-inner text-center grid">
             <article class="service-item">
               <div class="icon">
-                <img src="images/service-icon-1.png" />
+                <img src="images/service-icon-1.png" alt="cardio-monitoring"/>
               </div>
               <h3>Cardio Monitoring</h3>
               <p class="text text-sm">
@@ -174,7 +174,7 @@
 
             <article class="service-item">
               <div class="icon">
-                <img src="images/service-icon-2.png" />
+                <img src="images/service-icon-2.png" alt="medical-treatment"/>
               </div>
               <h3>Medical Treatment</h3>
               <p class="text text-sm">
@@ -189,7 +189,7 @@
 
             <article class="service-item">
               <div class="icon">
-                <img src="images/service-icon-3.png" />
+                <img src="images/service-icon-3.png" alt="emergency-help"/>
               </div>
               <h3>Emergency Help</h3>
               <p class="text text-sm">
@@ -202,7 +202,7 @@
 
             <article class="service-item">
               <div class="icon">
-                <img src="images/service-icon-4.png" />
+                <img src="images/service-icon-4.png" alt="first-aid"/>
               </div>
               <h3>First Aid</h3>
               <p class="text text-sm">
@@ -337,7 +337,7 @@
           <div class="posts-inner grid">
             <article class="post-item bg-white">
               <div class="img">
-                <img src="images/post-1.jpg" />
+                <img src="images/post-1.jpg" alt="blog-post1"/>
               </div>
               <div class="content">
                 <h4>
@@ -360,7 +360,7 @@
 
             <article class="post-item bg-white">
               <div class="img">
-                <img src="images/post-2.jpg" />
+                <img src="images/post-2.jpg" alt="blog-post2"/>
               </div>
               <div class="content">
                 <h4>
@@ -381,7 +381,7 @@
 
             <article class="post-item bg-white">
               <div class="img">
-                <img src="images/post-3.jpg" />
+                <img src="images/post-3.jpg" alt="blog-post3"/>
               </div>
               <div class="content">
                 <h4>
@@ -409,8 +409,7 @@
         <section id="contact-us" class="contact py">
           <div class="container grid">
             <div class="contact-left">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.3954721931073!2d0.05151647686438607!3d51.487609871808864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a8f141a9455d%3A0xa1083b75b39eda24!2sRutland%20House%2C%20Ogilby%20St%2C%20London%20SE18%205EP%2C%20UK!5e0!3m2!1sen!2sng!4v1687542500223!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2485.1793549829686!2d0.17690907686358368!3d51.473222071805516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8afd32e896213%3A0xa49b0e5c84074bfa!2s5%20Butler%20Dr%2C%20Erith%20DA8%203AQ%2C%20UK!5e0!3m2!1sen!2sng!4v1697210165524!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
             <div class="contact-right text-white text-center bg-blue">
               <div class="contact-head">
                 <h3 class="lead">Contact Us</h3>
@@ -431,7 +430,7 @@
                 </li>
                 <li>
                   <i class="fas fa-phone"></i>
-                  <span>+44 7944 624143</span>
+                  <span>+44 7496 595567</span>
                 </li>
                 <li>
                   <i class="fas fa-phone"></i>
@@ -478,14 +477,14 @@
           <div class="footer-item">
             <h3 class="footer-head">about us</h3>
             <div class="icon">
-              <img src="images/logo1.png" />
+              <img src="images/logo1.png" alt="paired-health"/>
             </div>
             <p class="text text-md">
               Paired Health Solutions is a leading healthcare provider committed to delivering exceptional care and support to individuals in need. With a team of dedicated professionals, we strive to enhance the well-being and quality of life for our clients.
             </p>
             <address>
               <i class="fas fa-map-marker-alt"></i>
-              Flat 8, Rutland house <br> Ogilby St, London SE18 5EP, UK.
+              5 Butler Dr, <br> Erith DA8 3AQ, UK.
             </address>
           </div>
 
@@ -533,7 +532,7 @@
               </li>
               <li>
                 <i class="fas fa-phone"></i>
-                <span>+44 7944 624143</span>
+                <span>+44 7496 595567</span>
               </li>
               <li>
                 <i class="fas fa-phone"></i>
