changed contact info

--- a/index.html
+++ b/index.html
@@ -422,11 +422,11 @@
               <ul class="contact-info">
                 <li>
                   <i class="fas fa-envelope"></i>
-                  <span>info@pairedhealthsolutions.co.uk</span>
+                  <span>info@pairedhealthsolutions.org</span>
                 </li>
                 <li>
                   <i class="fas fa-envelope"></i>
-                  <span>hr@pairedhealthsolutions.co.uk</span>
+                  <span>hr@pairedhealthsolutions.org</span>
                 </li>
                 <li>
                   <i class="fas fa-phone"></i>
@@ -494,11 +494,11 @@
               <br>
               <li>
                 <i class="fas fa-envelope"></i>
-                <span>info@pairedhealthsolutions.co.uk</span>
+                <span>info@pairedhealthsolutions.org</span>
               </li>
               <li>
                 <i class="fas fa-envelope"></i>
-                <span>hr@pairedhealthsolutions.co.uk</span>
+                <span>hr@pairedhealthsolutions.org</span>
               </li>
               <li>
                 <i class="fas fa-phone"></i>
